--- a/Android/QSmartFashion/app/src/main/res/layout/activity_login.xml
+++ b/Android/QSmartFashion/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
     <LinearLayout
         android:layout_margin="20dp"
         android:background="@drawable/rounded_rectangle"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@id/login_logo"
         android:orientation="vertical"
         android:layout_centerInParent="true"
@@ -36,13 +36,14 @@
         <EditText
             android:id="@+id/login_password"
             android:layout_marginBottom="5dp"
+            android:inputType="textPassword"
             android:hint="@string/login_password_placeholder"
             android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/login_login"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/off_red"
             android:textStyle="bold"
             android:textSize="20sp"
