--- a/Android/QSmartFashion/app/src/main/res/layout/activity_tracker.xml
+++ b/Android/QSmartFashion/app/src/main/res/layout/activity_tracker.xml
@@ -3,4 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tmp_settings"
+        android:text="SETTINGS"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textSize="50sp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
