--- a/Android/QSmartFashion/app/src/main/res/values/colors.xml
+++ b/Android/QSmartFashion/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <color name="off_red">#FF6A73</color>
+    <color name="off_green">#2ca167</color>
     <color name="white_transparent">#D9ffffff</color>
 </resources>
